--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>  <title>Fist heroku deployment</title>  <link rel="stylesheet" type="text/css" href="./css/mystyle.css"></head><body><h1>It is deployed</h2></body></html>
+<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>  <title>Fist heroku deployment</title>  <link rel="stylesheet" type="text/css" href="./css/mystyle.css"></head><body><h1>It is deployed</h1>    <form>
+        First number: <input type="text" name="firstnumber" id="firstnumber" /><br />
+        Second number: <input type="text" name="secondnumber" id="secondnumber" />
+        <button type="button" onclick="get_numbers()">Click Me!</button> 
+    </form>    <div id="final_div"> </div>    <script>
+        function get_numbers() {
+            var num1 = parseInt(document.getElementById('firstnumber').value);
+            var num2 = parseInt(document.getElementById('secondnumber').value);
+            var sum = num1 + num2;
+            console.log(sum);
+            document.getElementById("final_div").innerHTML = sum;
+        };
+    </script></body></html>
